--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="home-data">
       <h2 class="home-title">
         Hi 👋,<br />I'am <span class="home-title-color">Roshani</span><br />
-       <span id="jobTitle" >WEB Developer</span> 
+       <span id="jobTitle" >Web Developer</span> 
       </h2>
 
       <a href="https://drive.google.com/drive/my-drive" target="_blank"
