--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
        <span id="jobTitle" >Web Developer</span> 
       </h2>
 
-      <a href="https://drive.google.com/drive/my-drive" target="_blank"
+      <a href="https://drive.google.com/file/d/1W_jLDEXicS1ZijDb4WwcVr5E9Yg6pgWt/view" target="_blank"
         class="button">Resume</a>
 
     </div>
@@ -281,19 +281,15 @@
             <br />HTML | CSS | DOM  |  JavaScript 
           </p>
            <div class="project-btns"> 
-             <a href="https://github.com/tusharsahu2599/medplus" target="_blank" class="small-btn button">
+             <a href="https://github.com/rathodshivam05/Kheliya_Clone" target="_blank" class="small-btn button">
 
               <i class="bx bxl-github"></i>
             </a> 
-             <a href="https://tusharsahu2599.github.io/medplus/homepage" target="_blank" class="small-btn button">
+             <a href="https://frolicking-mochi-78d43d.netlify.app/index.html" target="_blank" class="small-btn button">
               Live
               <i class="bx bx-link-external"></i> 
              </a>  
-             <a href="https://medium.com/@hgauba4/how-did-our-team-build-the-mednear-clone-241227129f79" target="_blank"
-              class="small-btn button">
-              Blog
-              <i class="bx bx-blog"></i> 
-             </a> 
+             
           </div> 
         </div>
 
